# elastic-sycl-hls

./: .gitignore  CMakeLists.txt  README.md  cdddDriver.sh  driver.sh  driverCDDD.sh  driverLSQ.sh  elastic_pass.sh  install.sh
FPT_benchmarks/: build_all.py  build_for_table_2.sh  dynamatic_vivado_results.csv  gen_table_2.py  run_hw_benchmark_dram.py  run_sim_benchmarks.py
FPT_benchmarks/expected_csv_files/: our_results_bram.csv  our_results_dram.csv  our_results_dram_in_hw.csv  table_2.csv
experiments/: Makefile  bc_bram.cpp  bc_bram_oracle.cpp  bfs_bram.cpp  bfs_bram_oracle.cpp  bitonic_sort_bram.cpp  bitonic_sort_bram_oracle.cpp  bitonic_sort_dram.cpp  block_1.cpp  block_1_oracle.cpp  block_2.cpp  block_2_oracle.cpp  block_3.cpp  block_3_oracle.cpp  block_4.cpp  block_4_oracle.cpp  block_5.cpp  block_5_oracle.cpp  block_6.cpp  block_6_oracle.cpp  block_7.cpp  block_7_oracle.cpp  block_8.cpp  block_8_oracle.cpp  bnn_bram.cpp  bnn_dram.cpp  build_bench.py  build_bench_num_poison_blocks.py  build_fusion_test.py  chaos_ncg_bram.cpp  chaos_ncg_dram.cpp  cholesky_dram.cpp  cholesky_dram_dynamic.cpp  congress_network.txt  correlation_dram.cpp  covariance.cpp  doitgen_triple.cpp  doitgen_triple_2.cpp  doitgen_triple_3.cpp  doitgen_triple_dram.cpp  (+127 more)
experiments/backup/: adi_dram.cpp  bitonic_sort_bram.cpp  bnn_bram.cpp  chaos_ncg_dram.cpp  delaunay_triangulation.cpp  doitgen_triple_2.cpp  doitgen_triple_2_bram.cpp  doitgen_triple_3.cpp  filter_sum.cpp  floyd_warshall_bram.cpp  gemver.cpp  get_tanh_double_bram.cpp  get_tanh_double_dram.cpp  gram_schmidt.cpp  gsum.cpp  histogram_2_addresses.cpp  histogram_2_addresses_1_decoupled.cpp  histogram_2_addresses_1_speculated.cpp  histogram_bram.cpp  histogram_bram_dynamic.cpp  histogram_bram_fusing.cpp  histogram_dram_2loops.cpp  histogram_dram_2loops_2lsqs.cpp  histogram_dram_4loops_1triplenested.cpp  histogram_fusing.cpp  histogram_if_2.cpp  histogram_if_bram.cpp  if_mul.cpp  if_mul_2.cpp  jacobi1d_dram.cpp  jacobi1d_reach_dram.cpp  kernel_2mm_dram_fused.cpp  lud_bram_dynamic.cpp  lud_dram.cpp  lud_dram_dynamic.cpp  lud_dram_max_perf.cpp  manual_fusion_test.py  (+50 more)
include/: AnalysisReportSchema.h  CDDDAnalysis.h  CDG.h  CommonLLVM.h  DataHazardAnalysis.h  DynamicLoopFusionAnalysis.h  HelloWorld.h  LoadStoreQueueCommon.h  StoreQueueInsert.h  StoreqUtils.h  TableOperationLatency.h
include_sycl/: constexpr_math.hpp  data_bundle.hpp  device_print.hpp  exception_handler.hpp  memory_utils.hpp  metaprogramming_utils.hpp  pipe_utils.hpp
inputs/: compile_from_bc.sh  compile_from_bc_sim.sh  compile_to_bc.sh  compile_to_bc_sim.sh  compile_to_hw.py  driver.sh  genKernelsAndPipes.py  gen_bench_table.py  opt.sh  run_exp.py  run_qsizes_exp.py  run_tests.py  send_to_devcloud.py  vis_exp_percentage.py  vis_exp_qsizes.py
lib/: CDDDAnalysis.cpp  CDDDAnalysisPrinter.cpp  CDDDTransform.cpp  CDG.cpp  CMakeLists.txt  DDGDotPrinter.cpp  DataHazardAnalysis.cpp  DataHazardAnalysisPrinter.cpp  DynamicLoopFusionAnalysis.cpp  DynamicLoopFusionAnalysisPrinter.cpp  DynamicLoopFusionTransform.cpp  ElasticAnalysisPrinter.cpp  ElasticTransform.cpp  HelloWorld.cpp  HoistConstGep.cpp  HoistConstantGepTransform.cpp  LoadStoreQueueAnalysis.cpp  LoadStoreQueueTransform.cpp  LoopRAWHazardReport.cpp  PipeDeduplicationPass.cpp  StoreQueueInsert.cpp  StoreQueueTransform.cpp
lsq/: DataUnitDRAM.hpp  DataUnitDRAM_noforward.hpp  DependencyTable.hpp  LoadStoreQueue.hpp  LoadStoreQueueBRAM.hpp  LoadStoreQueueDRAM.hpp  MultiStreamingMemory.hpp  MultiplexorLSQ.hpp  OldStreamingMemory.hpp  README.md  StreamingMemory.hpp  TaggedStreamingMemory.hpp  TaggedStreamingMemoryMultiKernel.hpp  TaggedStreamingMemorySingle.hpp  TaggedStreamingMemorySingle2.hpp  TaggedStreamingMemorySingleKernel.hpp  TaggedStreamingMemorySingleKernelCache.hpp  TaggedStreamingMemorySingleKernelCacheManyLoads.hpp  TaggedStreamingMemory_iters.hpp  memory_utils.hpp  metaprogramming_utils.hpp  onchip_memory_with_cache.hpp  pipe_utils.hpp  tuple.hpp
scripts/: ASTCommon.py  ASTTransformCDDD.py  ASTTransformLSQ.py  GetBottleneckLines.py  GetDataDependencyBottlenecks.py  TransformAST.py  compile_from_bc.sh  compile_to_bc.sh  constants.py  get_cycles.py  prepare_ir.sh  run_sim.sh  run_tests.py  send_to_devcloud.py
(+4013 files in other folders)
